# adaptive-rag-agent

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  docker-compose.yml
agent/: .env.example  dockerfile  pyproject.toml  settings.yaml
agent/notebooks/: agent_evaluation.ipynb  rag_chat_playground.ipynb  visualization_embedding.ipynb
agent/scripts/: sync_vector_store.py
agent/src/: app_context.py  bootstrap.py
agent/src/api/: app.py  deps.py
agent/src/api/routers/: chat.py  documents.py  health.py
agent/src/api/schemas/: chat.py  document.py
agent/src/api/use_cases/: add_document.py  ask_question.py
agent/src/core/: config.py  load_config.py  logging.py  observability.py  paths.py  traceback.py
agent/src/evaluation/: base.py  evaluator.py  factory.py  prompts.py  schemas.py
agent/src/rag/: chains_library.py  nodes.py  prompts.py
agent/src/rag/embeddings/: base.py  config.py  factory.py  hugging_face.py  ollama.py  openai.py
agent/src/rag/llm/: base.py  config.py  factory.py  ollama.py  openai.py
agent/src/rag/orchestrators/: base.py  conversational_rag_orchestrator.py  docs_pers_rag_orchestrator.py  factory.py  profile_rag_orhestrator.py  reranking_rag_orhestrator.py  simple_orchestrator.py
agent/src/rag/orchestrators/subgraphs/: base.py  profile_update_subgraph.py  retrieval_subgraph.py
agent/src/rag/persistence/: base.py  config.py  factory.py
agent/src/rag/persistence/encryption/: base.py  fernet.py
agent/src/rag/persistence/sqlalchemy/: base.py  engine.py  models.py  repositories.py
agent/src/rag/reranker/: base.py  config.py  factory.py  llm_reranker.py
agent/src/rag/retriever/: base.py  config.py  factory.py  mmr.py  simple.py
agent/src/rag/retriever/filters/: base.py  chroma.py
agent/src/rag/schemas/: graph_state.py  output_parsers.py  vectorstore.py
agent/src/rag/vectorstore/: base.py  chroma.py  config.py  factory.py
ui-streamlit/: .dockerignore  .env.example  app.py  bootstrap.py  dockerfile  pyproject.toml
ui-streamlit/components/: chat_messages.py  document_form.py  sidebar.py
ui-streamlit/constants/: metadata.py
ui-streamlit/core/: config.py  context.py  deps.py
ui-streamlit/pages/: chat.py  documents.py
ui-streamlit/services/: api_service.py
