[project]
name = "agent"
version = "0.0.0"
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi>=0.124.4",
  "uvicorn[standard]",
  "python-dotenv>=1.2.1",
  "rich>=14.2.0",
  "sentry-sdk>=2.48.0",
  "opentelemetry-api==1.39.0",
  "opentelemetry-sdk==1.39.0",
  "opentelemetry-exporter-otlp==1.39.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "A"]
fixable = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E501"]

[tool.mypy]
python_version = "3.12"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "types-pyyaml>=6.0.12.20250915",
    "opentelemetry-instrumentation-fastapi==0.60b0",
    "opentelemetry-instrumentation-langchain==0.50.1",
    "opentelemetry-instrumentation-logging==0.60b0",
    "opentelemetry-instrumentation-requests==0.60b0",
    "opentelemetry-instrumentation-aiohttp-client==0.60b0",
    "opentelemetry-instrumentation-asyncio==0.60b0",
]