[project]
name = "agent"
version = "0.0.0"
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi>=0.124.4",
  "uvicorn[standard]",
  "python-dotenv>=1.2.1",
  "rich>=14.2.0",
  "sentry-sdk>=2.48.0",
  "opentelemetry-api==1.39.0",
  "opentelemetry-sdk==1.39.0",
  "opentelemetry-exporter-otlp==1.39.0",
  "langchain>=1.2.0",
  "langchain-core>=1.2.2",
  "langchain-openai>=1.1.5",
  "langchain-ollama>=1.0.1",
  "langchain-community>=0.4.1",
  "langchain-chroma>=0.2.6",
  "psycopg[binary]>=3.3.2",
  "psycopg2-binary>=2.9.11",
  "aiosqlite>=0.22.1",
  "asyncpg>=0.31.0",
  "cryptography>=46.0.3",
  "langgraph>=1.0.5",
  "beautifulsoup4>=4.14.3",
  "bs4>=0.0.2",
  "tqdm>=4.67.1",
  "matplotlib>=3.10.8",
  "locust>=2.43.0",
  "gevent>=25.9.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "A"]
fixable = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E501"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.mypy]
python_version = "3.12"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "types-pyyaml>=6.0.12.20250915",
    "opentelemetry-instrumentation-fastapi==0.60b0",
    "opentelemetry-instrumentation-langchain==0.50.1",
    "opentelemetry-instrumentation-logging==0.60b0",
    "opentelemetry-instrumentation-requests==0.60b0",
    "opentelemetry-instrumentation-aiohttp-client==0.60b0",
    "opentelemetry-instrumentation-asyncio==0.60b0",
    "langchain-huggingface>=1.2.0",
    "sentence-transformers>=5.2.0",
    "scikit-learn>=1.8.0",
    "litellm>=1.80.11",
    "datasets>=4.8.5",
    "pdfplumber>=0.11.9",
    "seaborn>=0.13.2",
    "plotly>=6.5.0",
    "mplcursors>=0.7",
]