[project]
name = "ui"
version = "0.0.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "A"]
fixable = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E501"]

[tool.mypy]
python_version = "3.12"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
